[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Kenney_Future.tres" type="DynamicFont" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://SpawnMeteor.gd" type="Script" id=4]
[ext_resource path="res://spaceshooter/PNG/Lasers/laserBlue09.png" type="Texture" id=5]
[ext_resource path="res://spaceshooter/PNG/Lasers/laserBlue08.png" type="Texture" id=6]
[ext_resource path="res://Kenney Future.ttf" type="DynamicFontData" id=7]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 241.5, 16 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Star" type="AnimatedSprite" parent="."]
position = Vector2( 36, 340.5 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
playing = true

[node name="Star2" type="AnimatedSprite" parent="."]
position = Vector2( 432, 544 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
playing = true

[node name="Star3" type="AnimatedSprite" parent="."]
position = Vector2( 384, 168 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="Star4" type="AnimatedSprite" parent="."]
position = Vector2( 136, 120 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="Star5" type="AnimatedSprite" parent="."]
position = Vector2( 288, 384 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="Star6" type="AnimatedSprite" parent="."]
position = Vector2( 104, 624 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
playing = true

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 279, 669 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="SpawnMeteor" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Earth" type="Area2D" parent="."]
position = Vector2( 224, 712 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Earth"]
position = Vector2( 16, 24 )
shape = SubResource( 1 )

[node name="LivesLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
text = "Lives:
"

[node name="Lives" type="Label" parent="."]
margin_left = 70.0
margin_top = 16.0
margin_right = 110.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="DamageTimer" type="Timer" parent="."]

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 372.0
margin_top = 16.0
margin_right = 442.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "Score:"

[node name="Score" type="Label" parent="."]
margin_left = 444.0
margin_top = 16.0
margin_right = 484.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="LevelLabel" type="Label" parent="."]
margin_left = 152.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "Level:"

[node name="Level" type="Label" parent="."]
margin_left = 225.0
margin_top = 16.0
margin_right = 265.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="GameOver" type="Label" parent="."]
visible = false
margin_left = 152.0
margin_top = 157.0
margin_right = 264.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over"

[node name="Button" type="Button" parent="GameOver"]
margin_left = -4.0
margin_top = 51.0
margin_right = 121.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "Play Again"

[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="SpawnMeteor" method="_on_SpawnTimer_timeout"]
[connection signal="area_entered" from="Earth" to="." method="_on_Earth_area_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="pressed" from="GameOver/Button" to="." method="_on_Button_pressed"]
